[gd_scene load_steps=14 format=3 uid="uid://dd7m7gj8r51qc"]

[ext_resource type="Script" path="res://scripts/Enemy_scripts/Boss.gd" id="1_o0b1u"]
[ext_resource type="Texture2D" uid="uid://cicll6dlrgo5f" path="res://assets/Enemy_Galore_I/Boss/demon_slime_FREE_v1.0_288x160_spritesheet.png" id="2_u8tcd"]

[sub_resource type="Animation" id="Animation_66ihp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(11, 0)]
}

[sub_resource type="Animation" id="Animation_prts0"]
resource_name = "new_animation"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.2, 0, 0.1, 0.2, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(12, 2), Vector2i(4, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(9, 2), Vector2i(10, 2), Vector2i(11, 2), Vector2i(13, 2), Vector2i(14, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8, 1.4, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"hit"
}, {
"args": [],
"method": &"end_of_hit"
}, {
"args": [],
"method": &"start_walking"
}]
}

[sub_resource type="Animation" id="Animation_ke04d"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4), Vector2i(7, 4), Vector2i(8, 4), Vector2i(9, 4), Vector2i(21, 4)]
}

[sub_resource type="Animation" id="Animation_jbqe8"]
resource_name = "get_hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3)]
}

[sub_resource type="Animation" id="Animation_uj1en"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_jiulm"]
resource_name = "walk"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1), Vector2i(9, 1), Vector2i(10, 1), Vector2i(11, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_grhl3"]
_data = {
"RESET": SubResource("Animation_66ihp"),
"attack": SubResource("Animation_prts0"),
"death": SubResource("Animation_ke04d"),
"get_hit": SubResource("Animation_jbqe8"),
"idle": SubResource("Animation_uj1en"),
"walk": SubResource("Animation_jiulm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afejf"]
size = Vector2(86, 107)

[sub_resource type="CircleShape2D" id="CircleShape2D_eve6e"]
radius = 123.179

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fe350"]
size = Vector2(58, 59)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aug01"]
size = Vector2(98, 20)

[node name="Boss" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource("1_o0b1u")

[node name="Sprite2d" type="Sprite2D" parent="."]
position = Vector2(141, -5)
texture = ExtResource("2_u8tcd")
hframes = 22
vframes = 5
frame = 11

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_grhl3")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(144, 18.5)
shape = SubResource("RectangleShape2D_afejf")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(142, 25)
shape = SubResource("CircleShape2D_eve6e")
debug_color = Color(1, 1, 1, 0.42)

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(69, 41)
shape = SubResource("RectangleShape2D_fe350")
debug_color = Color(0.811683, 0.00210832, 0.983366, 0.42)

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2(67, 60)
shape = SubResource("RectangleShape2D_aug01")
debug_color = Color(0.793782, 0, 0.0434671, 0.42)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_attack_detector_body_entered"]
